# gemma-ui-app

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/hemant/plannerv1/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md  README.txt
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni_stub.cpp
app/src/main/java/com/hemant/plannerv1/: AppContainer.kt  MainActivity.kt
app/src/main/java/com/hemant/plannerv1/accessibility/: GestureExecutor.kt  UiActionAccessibilityService.kt
app/src/main/java/com/hemant/plannerv1/agent/: ActionHistory.kt  AgentOrchestrator.kt  AgentState.kt  AppTargetDetector.kt  UiAction.kt
app/src/main/java/com/hemant/plannerv1/capture/: ScreenCaptureForegroundService.kt  ScreenCaptureManager.kt  ScreenshotProcessor.kt
app/src/main/java/com/hemant/plannerv1/eval/: EvalGoalReader.kt  EvalGoalResult.kt  EvalReportWriter.kt  EvalRunner.kt  EvalRunnerState.kt  EvalStepRecord.kt
app/src/main/java/com/hemant/plannerv1/logging/: DbgLog.kt  TestLogger.kt
app/src/main/java/com/hemant/plannerv1/model/: BackendConfig.kt  GemmaModelManager.kt  LiteRtBackend.kt  LlamaCppBackend.kt  LlmBackend.kt  ModelInputBuilder.kt  ModelOutputParser.kt  PromptCacheManager.kt  PromptInjectionManager.kt  SpeculativeDecodingManager.kt
app/src/main/java/com/hemant/plannerv1/overlay/: FloatingBarService.kt  FloatingBarView.kt
app/src/main/java/com/hemant/plannerv1/permissions/: PermissionManager.kt
app/src/main/java/com/hemant/plannerv1/safety/: SafetyController.kt
app/src/main/java/com/hemant/plannerv1/ui/: LogsScreen.kt  MainScreen.kt  PermissionStatusScreen.kt
app/src/main/java/com/hemant/plannerv1/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: ui_action_accessibility_service.xml
app/src/test/java/com/hemant/plannerv1/: ExampleUnitTest.kt
app/src/test/java/com/hemant/plannerv1/accessibility/: CurrentAppContextTest.kt
app/src/test/java/com/hemant/plannerv1/agent/: AppTargetDetectorTest.kt
app/src/test/java/com/hemant/plannerv1/capture/: ScreenshotFrameTest.kt
app/src/test/java/com/hemant/plannerv1/model/: ModelInputBuilderTest.kt  ModelOutputParserTest.kt
app/src/test/java/com/hemant/plannerv1/safety/: SafetyControllerTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
